correction mobile version

--- a/src/components/blog/post/article.module.sass
+++ b/src/components/blog/post/article.module.sass
@@ -95,6 +95,8 @@
             color: #000
             +r(765)
                 margin: 1rem -1.08rem 0
+            +r(480)
+                font-size: 2rem
         ul, ol
             li:not(:first-child)
                 margin-block-start: 1rem
