--- a/src/components/demo-popup/demo-popup.module.sass
+++ b/src/components/demo-popup/demo-popup.module.sass
@@ -18,6 +18,10 @@
         opacity: 1
         visibility: visible
         pointer-events: all
-        
+.list
+    list-style-type: disc 
+    padding-left: 15px
+    li
+        list-style: disc      
 .btn
     margin-block-start: 1.5rem
