--- a/src/components/sections/blog-section/blog-section.module.sass
+++ b/src/components/sections/blog-section/blog-section.module.sass
@@ -1,5 +1,5 @@
 .section
-    padding: 5rem 0
+    padding: 0 0 5rem 
     background: linear-gradient(180deg, rgba(231, 249, 253, 0) 0%, var(--StyleColor) 100%)
 .headline
     margin:  0 auto
