--- a/src/components/sections/slider/slider.module.sass
+++ b/src/components/sections/slider/slider.module.sass
@@ -60,6 +60,8 @@
         font-size: 2.57rem
     +r(765)
         font-size: 2.14rem
+    +r(580)
+        font-size: 2rem
 .description
     margin-block-start: 1.50rem
     height: 3.437rem
