--- a/src/components/sections/subscribe-banner/subscribe-banner.module.sass
+++ b/src/components/sections/subscribe-banner/subscribe-banner.module.sass
@@ -8,6 +8,7 @@
     +r(580)
         padding: 2.5rem 1.5rem
         margin: 0 -1.08rem
+        border-radius: 0
 .head
     width: 100%
     max-width: 38.75rem
