--- a/src/components/ui/page-headline/page-headline.module.sass
+++ b/src/components/ui/page-headline/page-headline.module.sass
@@ -7,3 +7,5 @@
     text-align: center
     +r(580)
         font-size: 3rem
+    +r(480)
+        font-size: 2.7rem
