--- a/src/components/ui/search/search.module.sass
+++ b/src/components/ui/search/search.module.sass
@@ -22,5 +22,8 @@
     inset-inline-end: 10px
     width: 10rem
     height: 3.75rem
+    +r(1280)
+        inset-block: 5px
+        inset-inline-end: 5px
     +r(480)
         width: 6rem
